--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Derimarg.github.io/photo-port",
   "name": "photo-port",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +8,6 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
-  "homepage": "https://github.com/Derimarg/photo-port",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
